# Sophy

./: .dockerignore  .editorconfig  .gitignore  Cargo.toml  Dockerfile  README.md  Sophy.example.toml  Sophy.exemple.toml  bot.Dockerfile  docker-compose.dev.yml  docker-compose.yml  example.env  grpc.Dockerfile  refinery.toml  server.Dockerfile  sqlx-data.json
.github/actions/prisma/: Dockerfile
.github/workflows/: api.yml  bot.yml  docker-in-dev.yml  rust.yml  server.yml  web.yml
api/: example.env  go.mod  go.sum  main.go
api/config/: config.go
api/database/: connection.go
api/models/: shard.go  user.go
api/modules/: jwt.go
bot/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Sophy.example.toml  build.rs  sqlx-data.json
bot/prisma/: schema.prisma
bot/prisma/migrations/20220210023259_add_table_xp/: migration.sql
bot/src/: bot.rs  config.rs  error.rs  format.rs  main.rs  states.rs  utils.rs
bot/src/api/: mod.rs
bot/src/api/core/: mod.rs
bot/src/api/grpc/: mod.rs
bot/src/api/server/: mod.rs
bot/src/commands/: mod.rs  ping.rs
bot/src/constants/: colors.rs
bot/src/database/: mod.rs
bot/src/database/functions/: xp.rs
bot/src/events/: level.rs  mod.rs
bot/src/logs/: mod.rs
bot/src/states/: grpc.rs  mod.rs  shard.rs
bot/src/utils/: message.rs
docker/: prisma.Dockerfile
docs/: semantic-commit.md
grpc/: .gitignore  Dockerfile  build-script.bat  example.env  go.mod  go.sum  main.go
grpc/database/: connection.go  global_xp.go  guild.go  models.go
grpc/pb/: bot.pb.go  bot_grpc.pb.go  sophy.pb.go  sophy_grpc.pb.go
grpc/pb/xp/: xp.pb.go  xp_grpc.pb.go
grpc/servers/: bot_server.go  sophy_server.go  xp_server.go
grpc/services/: bot.go
prisma/: schema.prisma
prisma/migrations/20211228152003_add_table_xp/: migration.sql
prisma/migrations/20220105163831_add_user_create_update_at/: migration.sql
prisma/migrations/20220106154921_add_table_user/: migration.sql
prisma/migrations/20220106155155_add_table_xp/: migration.sql
prisma/migrations/20220107171250_add_xp_update_at/: migration.sql
prisma/migrations/20220108165513_add_table_guild_modules/: migration.sql
prisma/migrations/20220205234113_add_user/: migration.sql
prisma/migrations/20220205235359_add_xp/: migration.sql
proto/: bot.proto  sophy.proto  xp.proto
server/: .dockerignore  go.mod  go.sum  main.go
server/config/: env.go
server/database/: connection.go  erros.go  models.go
server/pb/: sophy.pb.go  sophy_grpc.pb.go
server/services/: sophy_service.go
server/utils/: level.go
src/: bot.rs  cli.rs  config.rs  error.rs  handler.rs  main.rs
src/commands/: base.rs  mod.rs  none.rs  ping.rs  test.rs  util.rs
src/database/: mod.rs
src/database/entity/: mod.rs  prelude.rs  user.rs  xp.rs
src/database/functions/: guild.rs  mod.rs  server.rs  user.rs  xp.rs
src/database/models/: mod.rs  prelude.rs  users.rs
src/database/schemas/: mod.rs  prelude.rs  refinery_schema_history.rs  users.rs  xp.rs
src/database/scripts/: V1__add_table_users.sql  V2__add_table_xp.sql
src/events/: level.rs  mod.rs
src/logs/: mod.rs
src/models/: commands.rs
src/modules/: xp.rs
src/states/: config.rs  level.rs  mod.rs  shards.rs
src/utils/: constants.rs  user.rs
web/: .editorconfig  README.md  package.json
web/src/: App.vue  main.ts
web/src/assets/sass/: _variables.scss
web/src/components/: MenuBar.vue
web/src/views/: HomeView.vue
