[package]
name = "sophy_bot"
version = "0.1.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2021"

# Dependencies

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
chrono = "0.4.19"
clap = "3.0.0-beta.4"
serde = "1.0.133"
typed-builder = "0.9.1"

[dependencies.serenity]
version = "0.10.9"
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.12.0"
features = ["macros", "rt-multi-thread", "parking_lot"]

[dependencies.figment]
version = "0.10.6"
features = ["env", "toml"]

[dependencies.sqlx]
version = "0.5.10"
features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "offline"]

[dependencies.uuid]
version = "0.8.2"
features = ["v4"]

# Features

[features]
default = []

# Scripts

# prisma migrate dev --skip-generate
# sea-orm-cli generate entity -o src/database/entity
