[package]
name = "sophy_bot"
version = "0.1.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies

[dependencies]

[dependencies.poise]
git = "https://github.com/kangalioo/poise.git"
rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775"
