[package]
name = "sophy_bot"
version = "0.1.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies

[dependencies]
serde = "1.0.136"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"

[dependencies.poise]
git = "https://github.com/kangalioo/poise.git"
rev = "a28b0193ab032aaedb6b383d1be0d717f9dcf775"

[dependencies.tokio]
version = "1.16.1"
features = ["macros", "rt-multi-thread", "sync"]

[dependencies.figment]
version = "0.10.6"
features = ["env", "toml"]
