[package]
name = "sophy_bot"
version = "0.1.0"
authors = ["Gabriel-Paulucci <gabrielpauluccimunizmendes@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies

[dependencies]
serde = "1.0.136"
env_logger = "0.9.0"
log = "0.4.14"
chrono = "0.4.19"
poise = { git = "https://github.com/kangalioo/poise.git", rev = "0fc5d54" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread", "sync"] }
figment = { version = "0.10.6", features = ["env", "toml"] }
tonic = "0.6.2"
prost = "0.9.0"

[build-dependencies]
tonic-build = "0.6.2"
